--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
+  <title>Échale la culpa</title>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="#/resgitrarse">Registrarse</a></li>
+      <li><a href="#/login">LogIn</a></li>
+    </ul>
+  </nav>
+  <div id="app"></div>
   <script type="module" src="main.js"></script>
 </body>
 </html>
