routes and component with templete string

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
   <title>Échale la culpa</title>
 </head>
 <body>
-  <nav>
+  <!-- <nav>
     <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="#/resgitrarse">Registrarse</a></li>
-      <li><a href="#/login">LogIn</a></li>
+      <li><a id="toHome">Home</a></li>
+      <li><a id="">Registrarse</a></li>
+      <li><a id="toLogin">LogIn</a></li>
     </ul>
-  </nav>
-  <div id="app"></div>
+  </nav> -->
+  <div id="root"></div>
   <script type="module" src="main.js"></script>
 </body>
 </html>
