--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://kit.fontawesome.com/eb71235840.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./style.css">
   <title>Échale la culpa</title>
 </head>
@@ -16,22 +21,11 @@
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
+     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDhl8UbwLZqgbT0ZkSZnECYAijJ6cq-3Yw",
-    authDomain: "echale-la-culpa.firebaseapp.com",
-    projectId: "echale-la-culpa",
-    storageBucket: "echale-la-culpa.appspot.com",
-    messagingSenderId: "935955315781",
-    appId: "1:935955315781:web:d3f1c617ea7b2e7dec372c"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
   <script type="module" src="main.js"></script>
   <script type="module" src="./lib/firebase.js"></script>
 
