--- a/src/templete.html
+++ b/src/templete.html
@@ -16,6 +16,35 @@
             <button>Regístrate</button>
         </div>
     </div>
+
+    <div class="container timeline">
+        <div id="menu">
+            <button id="toPost"><i class="fas fa-pencil-alt"></i></button>
+            <button id="toPost"><i></i></button>
+            <button id="toPost"><i></i></button>
+        </div>
+    </div>
+
+    <form id="postForm">
+        <label for="singer">Por culpa de: </label>
+        <input name="singer" type="text">
+
+        <label for="song">Fragmento de canción:</label>
+        <textarea name="song" id="" cols="30" rows="10"></textarea>
+
+        <button>PUBLICAR</button>
+    </form>
+
+    <div class="card">
+        <h3 class="header-card">Por culpa de</h3>
+        <h2 class="singer-name"></h2>
+        <h1 class="song-sentence"></h1>
+        <i class="fas fa-heart" id="likePost"></i>
+        <div class="options-post">
+            <i class="fas fa-pencil-alt" id="editPost"></i>
+            <i class="fas fa-trash-alt" id="deletePost"></i>
+        </div>
+    </div>
     
 </body>
 </html>
